tests/ui-tests/tests/cases/inputobject-guess-validation.stderr
error: Could not find a field fieid in the GraphQL InputObject IssueOrder. Did you mean field?
  --> $DIR/inputobject-guess-validation.rs:31:13
   |
31 |         pub fieid: IssueOrderField,
   |             ^^^^^

error: This InputObject is missing these required fields: field
  --> $DIR/inputobject-guess-validation.rs:28:5
   |
28 |     #[cynic(graphql_type = "IssueOrder")]
   |     ^
